--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,10 @@ authors = ["Daniel Miles <danielmiles@vt.edu>"]
 description = "Material simulations research: 2D mass-spring lattice systems with exponential springs, viscous damping, and boundary conditions"
 
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Observables = "510215fc-4207-5dde-8ae0-7f3e852831b7"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
