Remove deprecated simulation scripts and update Project.toml to reflect changes in project structure. Revise README to include new simulation configurations and clarify available scripts. Update paths in data generation scripts to reference the new locations of deprecated scripts.

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "MaterialSimulations"
+# Anonymous project - no package name needed for script-based projects
 uuid = "00000000-0000-0000-0000-000000000000"
 version = "0.1.0"
 authors = ["Daniel Miles <danielmiles@vt.edu>"]
