--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 *.blg
 *.fdb_latexmk
 *.fls
-*.log
 *.out
 *.synctex.gz
 *.toc
@@ -44,4 +43,15 @@ Thumbs.db
 # Animation outputs (keep source, ignore generated)
 # animations/*.mp4
 # animations/*.gif
+
+# Optimization output directories (keep structure, ignore old runs)
+scripts/optimization/comparison_output/overnight_run_*/
+scripts/optimization/comparison_output/test_run_*/
+
+# Old optimization result files
+scripts/optimization/results_*.txt
+
+# Log files
+*.log
+!papers/**/*.log
 
